--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -16,7 +16,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: url("../images/bg-image.webp");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/bg-image.webp");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -33,6 +33,7 @@
 .hero-container .container {
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 
 .hero-container-column-meta {
@@ -40,4 +41,29 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
+}
+
+.social {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 25px;
+}
+
+.social-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+.social-icon a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 15px;
+}
+
+.social-icon a:hover {
+  color: #5D9D53;
 }
