--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -1,5 +1,27 @@
 .navigation {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  background-color: transparent;
+  position: absolute;
+  z-index: 2;
+}
+
+.mainmenu .nav-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px;
+}
+
+.nav-link {
+  color: white;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.nav-link:hover {
+  color: #5D9D53;
 }
