--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -11,9 +11,11 @@
 .hero-search {
   position: relative;
   display: flex;
+  align-items: flex-end;
   width: 100%;
   height: 60vh;
   z-index: 1;
+  padding: 6rem;
 }
 
 .hero-background,
