--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -79,3 +79,55 @@
 .social-icon a:hover {
   color: #5d9d53;
 }
+
+@media (min-width: 600px) {
+  .row {
+    flex-wrap: nowrap;
+  }
+
+  .social-icon img {
+    width: 40px;
+  }
+
+  .hero-title {
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 906px) {
+  .social-icon img {
+    width: 60px;
+  }
+
+  .hero-title {
+    font-size: 52px;
+  }
+}
+
+@media (max-width: 600px) {
+  .social {
+    gap: 15px;
+  }
+
+  .social-icon {
+    padding-left: 10px;
+    gap: 5px;
+  }
+
+  .social-icon img {
+    width: 30px;
+  }
+
+  .social-icon a {
+    font-size: 15px;
+    letter-spacing: 0.5;
+  }
+
+  .hero-title {
+    font-size: 25px;
+  }
+
+  button.button {
+    letter-spacing: 0;
+  }
+}
