--- a/assets/styles/testimonials.css
+++ b/assets/styles/testimonials.css
@@ -44,3 +44,45 @@
   width: 111px;
   height: 111px;
 }
+
+/* Media queries */
+@media (min-width: 600px) {
+  .testimonials {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 906px) {
+  .testimonials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .testimonials-boxes-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+
+}
+
+@media (min-width: 1280px) {}
+
+@media (max-width: 600px) {
+  .testimonials-boxes {
+    width: 100%;
+  }
+
+  .testimonials-boxes-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .testimonials-header h2 {
+    font-size: 45px;
+  }
+}
