--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -1,6 +1,7 @@
 /* HERO CSS STYLES */
 
-.hero {
+.hero,
+.hero-meal {
   position: relative;
   display: flex;
   width: 100%;
@@ -19,6 +20,7 @@
 }
 
 .hero-background,
+.hero-meal-background,
 .hero-background-search {
   position: absolute;
   width: 100%;
@@ -35,17 +37,29 @@
   z-index: 3;
 }
 
-.hero-container {
+.hero-container,
+.hero-meal-container {
   z-index: 6;
   display: flex;
   width: 100%;
   color: #ffffff;
 }
 
-.hero-container .container {
+.hero-container .container,
+.hero-meal-container .container {
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.hero-meal-container h1,
+.hero-meal-container p {
+  text-align: center;
+}
+
+.hero-meal-container .container .row {
+  justify-content: center;
+  display: flex;
 }
 
 .hero-container-column-meta {
@@ -53,6 +67,14 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
+}
+
+.hero--meal-container-column-meta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  max-width: 69%;
 }
 
 .social {
@@ -78,4 +100,56 @@
 
 .social-icon a:hover {
   color: #5d9d53;
+}
+
+@media (min-width: 600px) {
+  .row {
+    flex-wrap: nowrap;
+  }
+
+  .social-icon img {
+    width: 40px;
+  }
+
+  .hero-title {
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 906px) {
+  .social-icon img {
+    width: 60px;
+  }
+
+  .hero-title {
+    font-size: 52px;
+  }
+}
+
+@media (max-width: 600px) {
+  .social {
+    gap: 15px;
+  }
+
+  .social-icon {
+    padding-left: 10px;
+    gap: 5px;
+  }
+
+  .social-icon img {
+    width: 30px;
+  }
+
+  .social-icon a {
+    font-size: 15px;
+    letter-spacing: 0.5;
+  }
+
+  .hero-title {
+    font-size: 25px;
+  }
+
+  button.button {
+    letter-spacing: 0;
+  }
 }
