--- a/assets/styles/meal.css
+++ b/assets/styles/meal.css
@@ -1,4 +1,5 @@
-.meal {
+.meal,
+.nutrition {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,12 +10,19 @@
   background: #211b18;
 }
 
+.nutrition {
+  padding: 0px 0px 96px;
+}
+
 .container {
   display: flex;
   gap: 24px;
 }
 
 .meal-ingredients {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
   padding: 48px 96px;
   border-radius: 24px;
   background-color: #ffffff;
@@ -32,7 +40,7 @@
   text-transform: uppercase;
 
   color: #000000;
-  padding-bottom: 16px;
+  padding-bottom: 24px;
 }
 
 .meal-ingredients h6:after {
@@ -42,4 +50,123 @@
   left: 30%;
   width: 40%;
   border-bottom: 2px solid #000000;
+}
+
+.meal-ingredients-list .ingredient {
+  padding: 16px 0;
+}
+
+.ingredient {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.ingredient span.circle {
+  width: 16px;
+  height: 16px;
+  border: 1px solid #000;
+  border-radius: 16px;
+}
+
+.meal-instructions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 48px;
+}
+
+.meal-instructions h4 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 48px;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.nutrition-facts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.nutrition-facts h6 {
+  position: relative;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  padding: 24px;
+  color: #ffffff;
+}
+
+.nutrition-facts h6:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 30%;
+  width: 40%;
+  border-bottom: 2px solid #ffffff;
+}
+
+.nutrition-facts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+}
+
+.nutrition-facts-list {
+  margin-top: 24px;
+}
+
+.nutrition-item {
+  border-radius: 6px;
+  border: 1px solid #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.nutrition-facts .nutrition-item-header,
+.nutrition-facts .nutrition-item-body {
+  padding: 20px;
+}
+
+.nutrition-facts .nutrition-item-header {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 28px;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.nutrition-facts .nutrition-item-body {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  /* identical to box height, or 117% */
+
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: #ffffff;
+}
+
+.nutrition-item-header {
+  border-bottom: 1px solid #ffffff;
 }
