--- a/assets/styles/meal.css
+++ b/assets/styles/meal.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 48px 96px;
+  padding: 48px 48px;
   border-radius: 24px;
   background-color: #ffffff;
   color: #000000;
@@ -60,6 +60,15 @@
   display: flex;
   gap: 16px;
   align-items: center;
+}
+
+.ingredient span.text {
+  display: inline-flex;
+  flex-grow: 1;
+}
+
+.ingredient span.value {
+  font-weight: 600;
 }
 
 .ingredient span.circle {
